table update: row can be chosen, changed and highlited

--- a/cards/src/styles/card.css
+++ b/cards/src/styles/card.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,600&display=swap');
-@import 'bootstrap/dist/css/bootstrap.min.css';
+/* @import 'bootstrap/dist/css/bootstrap.min.css'; */
 
 * {
   margin:0;
@@ -16,12 +16,14 @@ body {
 
 .wrapper {
   width: 1280px;
-  margin: 50px auto;
+  margin: 0 auto;
+  background-color:aliceblue;
 }
 
 header {
   font-weight: 600;
   font-size: 20px;
+  margin-bottom: 20px;
 }
 
 header .top {
@@ -115,7 +117,7 @@ main .show-button{
   height: 35px;
   font-size: 14px;
   font-weight: bold;
-  background: rgb(251, 170, 21);
+  background: rgb(255, 177, 31);
   border-radius: 10px;
   text-align: center;
   line-height: 20px;
@@ -148,6 +150,7 @@ main .show-mean__show{
 }
 
 .word-english {
+  font-weight: 600;
   transition: transform 300ms ease;
 }
 
@@ -160,20 +163,15 @@ li{
 }
 
 .table__container {
-  display: grid;
+  /* display: grid; */
   margin: 0;
   padding-left: 45px;
-}
-
-.table {
-  display: grid;
-  grid-template-columns: 100px 150px 150px 150px 200px;
-  grid-template-rows: 1fr;
-  text-align: center;
+  text-align: left;
 }
 
 .table__cell{
-  padding-left: 10px;
+  height: 40px;
+  padding: 5px 15px 5px 15px;
   border: 1px solid grey;
 }
 
@@ -209,9 +207,17 @@ li{
 
 .table__header{
   text-align: center;
-  background-color: yellowgreen;
+  background-color: plum;
 }
 
-.table__row_input{
+.table_row{
   background-color: bisque;
+
+}
+.table_row_input{
+  background-color: khaki;
+}
+
+input {
+  width: 130px;
 }
