--- a/cards/src/styles/card.css
+++ b/cards/src/styles/card.css
@@ -33,6 +33,7 @@ header .top {
   width: 100%;
   height: 80px;
   margin-bottom: 50px;
+  z-index: 7;
   /* position: relative; */
 }
 
@@ -136,36 +137,12 @@ footer {
   height: 350px;
   /* width: 300px;
   height: 300px; */
-  margin: 20px;
+  margin: 0 20px 80px 20px;
   /* float: left; */
   justify-items: center;
   text-align: center;
   /* border: 1px solid red; */
 }
-
-
-/* .sliderStack{
-  display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  padding: 30px;
-  position: relative; /*  */
-/* }
-.sliderStack .card{
-  width: 230px;
-  height: 250px;
-  margin-bottom: 50px;
-  text-align: center;
-  line-height: 50px;
-  background: url('../img/notes.jpg') no-repeat;
-  background-size: cover;
-  background-position: center center;
-  color: red;
-  box-shadow: 5px 5px 10px lightgrey;
-  position: relative; */
-  /* position: absolute; */
-/* } */
 
 
 main {
@@ -178,6 +155,7 @@ main {
 }
 
 main .card{
+  position: relative;
   width: 400px;
   height: 300px;
   padding-top: 20px;
@@ -189,8 +167,6 @@ main .card{
   background-position: center center;
   color: red;
   box-shadow: 5px 5px 10px lightgrey;
-  position: relative;
-  /* position: absolute; */
 }
 
 main .card:hover {
@@ -226,13 +202,14 @@ main .show-button:hover{
 }
 
 main .show-button__hide{
-  background: rgb(251, 170, 21, 0);
+  display: none;
+  /* background: rgb(251, 170, 21, 0);
   border: none;
   position: absolute;
   right: 80px;
   bottom: 63px;
   width: 150px;
-  color: rgb(255, 255, 255, 0);
+  color: rgb(255, 255, 255, 0); */
 }
 
 main .show-mean{
@@ -274,6 +251,24 @@ li{
   border: 1px solid grey;
 }
 
+.table__cell:first-child{
+  width: 50px;
+}
+
+.table__cell:nth-child(2), :nth-child(3), :nth-child(4) {
+  width: 170px;
+}
+
+.table__cell:last-child {
+  width: 230px;
+}
+
+
+.table__cell__redFrame:focus-within{
+  border: 1px solid red;
+}
+
+
 .table__button{
   width: 65px;
   height: 30px;
@@ -285,24 +280,43 @@ li{
   font-weight: bold;
 }
 
-.table__button:hover{
+/* .table__button:hover{
   transform: scale(1.2) translateY(-1px);
-}
+} */
 
 .e {
   background-color: lightgreen;
 }
 
+.e:hover {
+  transform: scale(1.2) translateY(-1px);
+}
+
 .d {
   background-color: orange;
 }
+
+.d:hover {
+  transform: scale(1.2) translateY(-1px);
+}
+
+
 .s {
   background-color: lightseagreen;
+}
+
+.s:enabled {
+  transform: scale(1.2) translateY(-1px);
+}
+
+.s:disabled {
+  transform: none;
 }
 
 .c {
   background-color: lightcoral;
 }
+
 
 .table__header{
   text-align: center;
@@ -322,6 +336,15 @@ li{
 input {
   width: 130px;
 }
+
+input:valid {
+  border: 1px solid black;
+}
+
+input:invalid {
+  border: 2px solid red;
+}
+
 /* table END */
 
 /* flip-flop effect START */
@@ -396,7 +419,6 @@ input {
   outline: none;
 }
 
-
 /* page 404 */
 .container_nf_outer{
   display: flex;
@@ -446,4 +468,94 @@ input {
   align-items:center;
   padding-bottom: 7.5em;
   padding-left: 5em;
+}
+
+.learned-words{
+  margin-top: 30px;
+  padding: 10px 0 10px 0;
+  font-size: 16px;
+  font-weight: bold;
+  width: 300px;
+  height: 50px;
+  color:black;
+}
+
+.word-groups{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 1100px;
+  height: 150px;
+  padding: 20px;
+  position: relative;
+  color: black;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 100px;
+  /* border: 1px solid red; */
+}
+
+.wordsBox{
+  display: flex;
+  z-index: 3;
+}
+
+.wordsUnknown{
+  width: 320px;
+  border: 1px solid lightpink;
+  background-color: lightpink;
+  z-index: 2;
+}
+
+.wordsRemain{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 320px;
+  border: 1px solid rgb(175, 214, 248);
+  background-color: rgb(175, 214, 248);
+  z-index: 2;
+}
+
+.wordsKnown{
+  width: 320px;
+  border: 1px solid lightseagreen;
+  background-color: lightseagreen;
+  z-index: 2;
+}
+
+.cardMini{
+  position: absolute;
+  top: -80px;
+  border: 1px solid lightgray;
+  border-radius: 10px;
+  z-index: 0;
+  background: url('../img/notes.jpg') no-repeat;
+  background-size: cover;
+  background-position: center center;
+
+  padding: 20px;
+  margin-bottom: 30px;
+  margin-left: 35px;
+  text-align: center;
+  line-height: 10px;
+  box-shadow: 5px 5px 10px lightgrey;
+}
+
+.wordEnglishMini {
+  font-weight: 600;
+  font-size: 35px;
+}
+
+.showButtonMini{
+  margin: 0 auto;
+  width: 200px;
+  height: 40px;
+  font-size: 14px;
+  font-weight: bold;
+  background: rgb(255, 177, 31);
+  border-radius: 20px;
+  text-align: center;
+  line-height: 20px;
+  border: 1px solid grey;
 }
