--- a/cards/src/styles/card.css
+++ b/cards/src/styles/card.css
@@ -515,6 +515,7 @@ input:invalid {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  height: 110px;
 
   /* width: 250px; */
   border: 1px solid lightpink;
@@ -538,6 +539,7 @@ input:invalid {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  height: 110px;
 
   /* width: 250px; */
   border: 1px solid lightseagreen;
@@ -565,14 +567,14 @@ input:invalid {
   transition: all 2s ease-in-out;
 }
 
-.cardMini__transform:hover{
+/* .cardMini__transform:hover{
   transform: translate(50px, -30px) rotate(360deg);
   cursor: pointer;
 }
 
 .card-position{
   z-index: 4;
-}
+} */
 
 .wordEnglishMini {
   font-weight: 600;
@@ -636,4 +638,12 @@ input:invalid {
 
 .word-unknown:hover{
   transform: scale(1.2);
+}
+
+.cardMini__unknown{
+  display: none;
+}
+
+.cardMini__known{
+  display: none;
 }
